# StellarStream

./: IMPLEMENTATION_SUMMARY.md  TODO.md  TODO_1004.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  Dockerfile.event-watcher  MONITORING.md  ecosystem.config.cjs  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: event-watcher.ts  index.ts  test-websocket-load.ts  test-websocket.ts
backend/src/__jest__/: event-sourcing.test.ts
backend/src/__tests__/: event-watcher-separation.e2e.test.ts
backend/src/api/: wallet-auth.routes.ts
backend/src/lib/: event-hash-chain.ts  redis.ts
backend/src/middleware/: rateLimit.ts
backend/src/scripts/: migrate-to-event-sourcing.ts
backend/src/services/: event-source.service.ts  event-watcher-client.service.ts  event-watcher.service.ts  hash-chain-verification.service.ts  index.ts  stream-migration.service.ts  websocket.service.ts
contracts/splitter-v3/: .gitignore
contracts/splitter-v3/.cargo/: config.toml
contracts/splitter-v3/fuzz/: Cargo.toml
contracts/splitter-v3/fuzz/fuzz_targets/: fuzz_scheduled_split.rs  fuzz_split_funds.rs
contracts/splitter-v3/src/: events.rs  lib.rs  storage.rs  test.rs
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/components/: view-stream-client.tsx
frontend/components/layout/: mobile-nav-bar.tsx  responsive-layout.tsx
frontend/components/stream/: balance-projection-chart.tsx  progress-bar.tsx
frontend/lib/: fetch-public-stream.ts
frontend/styles/: responsive.css
(+2 files in other folders)
