[package]
name = "splitter-v3-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

# Pull in the contract lib so we can test the same math logic directly.
stellar-splitter-v3 = { path = "..", features = [] }

[[bin]]
name = "fuzz_split_funds"
path = "fuzz_targets/fuzz_split_funds.rs"
test = false
doc = false

[[bin]]
name = "fuzz_scheduled_split"
path = "fuzz_targets/fuzz_scheduled_split.rs"
test = false
doc = false
